fix for topn label text wrapping issue

--- a/frontend/src/app/shared/modules/dynamic-widgets/components/topn-widget/topn-widget.component.scss
+++ b/frontend/src/app/shared/modules/dynamic-widgets/components/topn-widget/topn-widget.component.scss
@@ -112,6 +112,7 @@ $action-bar-height: map-get($widgets-common-config, action-bar-height);
 
         .label {
             cursor: pointer;
+            white-space: nowrap;
         }
 
         .chart {
